GNOME Bugzilla – Bug 689887
droute: Fix another memory few memory leaks
Last modified: 2012-12-12 05:00:55 UTC
See patch.
Created attachment 231026 [details] [review] droute: Fix another memory few memory leaks We need to free the pointer array here, along with the path.
Comment on attachment 231026 [details] [review] droute: Fix another memory few memory leaks That looks right (and isn't causing any obvious problems from briefly testing it). Thanks for the patch.
Attachment 231026 [details] pushed as 87be498 - droute: Fix another memory few memory leaks