droute: Fix another memory few memory leaks

We need to free the pointer array here, along with the path.

https://bugzilla.gnome.org/show_bug.cgi?id=689887